--- a/index.html
+++ b/index.html
@@ -4,38 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/Css/style.css" />
-    <title>Coding Assessment</title>
+    <link rel="resetsheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Code Quiz!</title>
 </head>
 <body>
-    <section id="section">
-        <div id="starting">
-            <h1> Are you ready for a quiz? </h1>
-            <button id="start">TEST YOURSELVES!</button>
-</div>
+    <header>
+        <section>
+            <a href="">View Highscores</a>
+        </section>
+        <section class="timer">
+            Time: 0
+        </section>
+    </header>
+    <main class="start-page">
+        <h1>Coding Quiz Challenge</h1>
+        <section>
+            Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
+        </section>
+        <button class="start-button">Start Quiz</button>
+    </main>
+    <main class="quiz-page">
+        <h2></h2>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+    </main>
+    <main class="score-page">
+        <h3>All done!</h3>
+        <p class="final-score-message"></p>
+        <section>
+            <form method="POST">
+                <label for="initials-text">Enter Initials: </label>
+                <input type="text" class="initials" placeholder="ABC" name="initials-text"/>
+            </form>
+            <button class="submit-score-button">Submit</button>
+        </section>
+    </main>
+    <main class="highscores-page">
+        <h4>Highscores</h4>
+        <ol class="scores-list"></ol>
+        <section>
+            <button class="go-back-button">Go Back</button>
+            <button class="clear-highscores-button">Clear Highscores</button>
+        </section>
+    </main>
+    <script src="./assets/js/script.js"></script>
 
-<div>
-<span id="timer">100</span>
-seconds left
-<div>
-    <div class="questionElement">
-    </div> 
-    <button id="answer1"></button>
-    <button id="answer2"></button>
-    <button id="answer3"></button>
-    <button id="answer4"></button>
-    <div>
-</div>
 
-
-</div>
-<div>
-    
-
-
-</div>
-
-    
-  <script src="./Assets/Js/script.js"></script>
 </body>
 </html>
