fixed html errors

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="resetsheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="resetsheet" href=".Assets/css/reset-timer.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
     <title>Code Quiz!</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
             <button class="clear-highscores-button">Clear Highscores</button>
         </section>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./Assets/script.js"></script>
 
 
 </body>
